tests/paczka2/big_fuzzy/91540561.err
Error in line 5: pglchP4w A796 99,0
Error in line 2: HCQWw S70 59,8
Error in line 13: QVGRDOwsi A796 14,05
Error in line 12: S18NWJHR0 S70 79,2
Error in line 8: HCQWw A605 0,6
Error in line 27: A796 S70 4,5
Error in line 21: pglchP4w S70 75,5
Error in line 36: pglchP4w A78 70,3
Error in line 9: QVGRDOwsi A796 24,1
Error in line 47: QVGRDOwsi A605 -3,3
Error in line 50: AO1QH0 S70 56,06
Error in line 42: QVGRDOwsi A605 89,6
Error in line 52: A796 A605 32,6
Error in line 61: pglchP4w A78 99,1
Error in line 71: pglchP4w A605 33,1
Error in line 56: DGyNG4lYD A796 34,2
Error in line 82: AO1QH0 S70 58,9
Error in line 90: DGyNG4lYD Aa96 20,5
Error in line 99: DGyNG4lYD A{8 {1,5
Error in line 95: QVGRDOwsi A796 137,7
Error in line 100: QVGRDOwsi A78 1,3
Error in line 89: DGyNG4lYD A796 15,4
Error in line 109: S18NWJHR0 A796 34,6
Error in line 102: DGyNG4lYD A78 98,7
Error in line 116: QVGRDOwsi A605 95,1
Error in line 86: pglchP4w S70 4,3
Error in line 106: HCQWw A605 97,4
Error in line 111: AO1QH0 S70 446,3
Error in line 125: AO1QH0 A796 42,9
Error in line 127: AO1QH0 A605 50,2
Error in line 146: DGyNG4lYD S70 37,5
Error in line 141: HCQWw A605 94,9
Error in line 147: DGyNG4lYD A605 72,5
Error in line 148: S18NWJHR0 A78 96,4
Error in line 149: HCQWw S70 13,3
Error in line 150: DGyNG4lYD A78 10,6
Error in line 161: DGyNG4lYD A796 26,9
Error in line 168: QVGRDOwsi A78 360,5
Error in line 172: DGyNG4lYD A605 109,6
Error in line 190: DGyNG4lYD A78 65,2
Error in line 194: DGyNG4lYD A605 22,0
Error in line 197: HCQWw A796 81,2
Error in line 210: pglchP4w A78 289,3
Error in line 220: HCQWw A605 37,5
Error in line 227: S18NWJHR0 A78 25,6
Error in line 233: HCQWw A796 -5,8
Error in line 225: HCQWw A796 70,6
